Unify header designs

--- a/MoppApp/MoppApp/Accessibility.storyboard
+++ b/MoppApp/MoppApp/Accessibility.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -24,10 +24,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n97-rK-R9x">
-                                <rect key="frame" x="0.0" y="143" width="393" height="710"/>
+                                <rect key="frame" x="0.0" y="118.66666666666669" width="393" height="734.33333333333326"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyB-vq-rWY" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="690"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="714.33333333333337"/>
+                                        <subviews>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" scrollEnabled="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jMg-Qh-WOG">
+                                                <rect key="frame" x="8" y="10" width="359" height="660.5"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                                            </textView>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                 </subviews>
@@ -43,7 +54,7 @@
                                 <viewLayoutGuide key="frameLayoutGuide" id="UPd-Wk-ykd"/>
                             </scrollView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accessibility" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="bBp-20-pae" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
-                                <rect key="frame" x="78" y="59" width="239" height="76"/>
+                                <rect key="frame" x="59" y="86" width="268" height="24.666666666666671"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES" header="YES"/>
                                 </accessibility>
@@ -52,10 +63,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ivr-aG-jmF">
-                                <rect key="frame" x="325" y="72" width="48" height="48"/>
+                                <rect key="frame" x="325" y="50.333333333333343" width="48" height="96"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="48" id="G8b-31-NYm"/>
-                                    <constraint firstAttribute="height" constant="48" id="e8X-vO-XOv"/>
+                                    <constraint firstAttribute="width" constant="48" id="hLj-oP-1jp"/>
                                 </constraints>
                                 <color key="tintColor" name="MoppTitle"/>
                                 <state key="normal" image="DismissPopup"/>
@@ -67,15 +77,15 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="bBp-20-pae" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="1yY-zb-dKK"/>
+                            <constraint firstItem="bBp-20-pae" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="59" id="2v6-jN-hVd"/>
                             <constraint firstItem="n97-rK-R9x" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="2zk-Ud-fAc"/>
-                            <constraint firstItem="ivr-aG-jmF" firstAttribute="leading" secondItem="bBp-20-pae" secondAttribute="trailing" constant="8" id="AXv-gc-b4s"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ivr-aG-jmF" secondAttribute="trailing" constant="20" id="FT1-iW-Nzb"/>
-                            <constraint firstItem="n97-rK-R9x" firstAttribute="top" secondItem="ivr-aG-jmF" secondAttribute="bottom" constant="23" id="HHk-us-eAU"/>
-                            <constraint firstItem="n97-rK-R9x" firstAttribute="top" secondItem="bBp-20-pae" secondAttribute="bottom" constant="8" id="TxK-GL-zdB"/>
-                            <constraint firstItem="ivr-aG-jmF" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="13" id="aat-YV-Pfg"/>
-                            <constraint firstItem="bBp-20-pae" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="78" id="dRw-Ah-fkH"/>
+                            <constraint firstItem="ivr-aG-jmF" firstAttribute="height" secondItem="bBp-20-pae" secondAttribute="height" multiplier="3.89189" id="9d3-Vb-CjR"/>
+                            <constraint firstItem="bBp-20-pae" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="27" id="FVI-ET-qia"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ivr-aG-jmF" secondAttribute="trailing" constant="20" id="NAW-gH-hZy"/>
+                            <constraint firstItem="n97-rK-R9x" firstAttribute="top" secondItem="bBp-20-pae" secondAttribute="bottom" constant="8" id="OGX-bZ-v9a"/>
+                            <constraint firstItem="ivr-aG-jmF" firstAttribute="centerY" secondItem="bBp-20-pae" secondAttribute="centerY" id="bsd-Ou-jm8"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="n97-rK-R9x" secondAttribute="trailing" id="hIc-s9-JiM"/>
+                            <constraint firstItem="ivr-aG-jmF" firstAttribute="leading" secondItem="bBp-20-pae" secondAttribute="trailing" constant="-2" id="n2b-fN-7gi"/>
                             <constraint firstItem="n97-rK-R9x" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" constant="35" id="xB0-HP-TEu"/>
                         </constraints>
                     </view>
@@ -88,7 +98,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="128.98550724637681" y="98.4375"/>
+            <point key="canvasLocation" x="127.48091603053435" y="97.887323943661983"/>
         </scene>
     </scenes>
     <resources>
@@ -96,6 +106,9 @@
         <namedColor name="MoppTitle">
             <color red="0.015686274509803921" green="0.11764705882352941" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
