--- a/MoppApp/MoppApp/Settings.storyboard
+++ b/MoppApp/MoppApp/Settings.storyboard
@@ -33,11 +33,11 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="1480"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="SettingsHeaderCell" rowHeight="70" id="jXf-Fq-jhZ" customClass="SettingsHeaderCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="375" height="70"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="SettingsHeaderCell" rowHeight="140" id="jXf-Fq-jhZ" customClass="SettingsHeaderCell" customModule="MoppApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="375" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jXf-Fq-jhZ" id="cRF-oI-BcV">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xCe-0u-F0n">
@@ -190,7 +190,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="SettingsChoiceCell" rowHeight="126" id="DcP-fJ-3lt" customClass="SettingsChoiceCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="245" width="375" height="126"/>
+                                        <rect key="frame" x="0.0" y="325" width="375" height="126"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DcP-fJ-3lt" id="cT5-Ed-aRg">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="126"/>
@@ -1227,7 +1227,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diagnostics" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vsg-kH-FdR" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
-                                <rect key="frame" x="69" y="39" width="238" height="24.5"/>
+                                <rect key="frame" x="59" y="47" width="242" height="24.5"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES" header="YES"/>
                                 </accessibility>
@@ -1235,6 +1235,18 @@
                                 <color key="textColor" name="MoppTitle"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BfW-sn-d7r">
+                                <rect key="frame" x="313" y="35.5" width="48" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="dXR-Ed-BSj"/>
+                                    <constraint firstAttribute="width" constant="48" id="y2L-T6-uhA"/>
+                                </constraints>
+                                <color key="tintColor" name="MoppTitle"/>
+                                <state key="normal" image="DismissPopup"/>
+                                <connections>
+                                    <action selector="dismissAction" destination="B8K-Cg-QcU" eventType="touchUpInside" id="2bA-fO-1B4"/>
+                                </connections>
+                            </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ki8-k3-cmp">
                                 <rect key="frame" x="0.0" y="120" width="375" height="880"/>
                                 <subviews>
@@ -1557,18 +1569,6 @@
                                     <constraint firstItem="P3E-QG-6de" firstAttribute="height" secondItem="Ki8-k3-cmp" secondAttribute="height" priority="250" constant="100" id="n30-fA-pfF"/>
                                 </constraints>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BfW-sn-d7r">
-                                <rect key="frame" x="315" y="35" width="44" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="Dgc-FK-8WE"/>
-                                    <constraint firstAttribute="width" constant="44" id="y2L-T6-uhA"/>
-                                </constraints>
-                                <color key="tintColor" name="MoppTitle"/>
-                                <state key="normal" image="DismissPopup"/>
-                                <connections>
-                                    <action selector="dismissAction" destination="B8K-Cg-QcU" eventType="touchUpInside" id="2bA-fO-1B4"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ieV-Tc-v8g"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1576,12 +1576,12 @@
                             <constraint firstItem="Ki8-k3-cmp" firstAttribute="bottom" secondItem="ieV-Tc-v8g" secondAttribute="bottom" id="0WU-zQ-RHF"/>
                             <constraint firstItem="Ki8-k3-cmp" firstAttribute="top" secondItem="ieV-Tc-v8g" secondAttribute="top" constant="100" id="1Mk-R2-9dU"/>
                             <constraint firstItem="Ki8-k3-cmp" firstAttribute="leading" secondItem="ieV-Tc-v8g" secondAttribute="leading" id="EAr-GK-duC"/>
-                            <constraint firstItem="BfW-sn-d7r" firstAttribute="leading" secondItem="Vsg-kH-FdR" secondAttribute="trailing" constant="8" id="JQe-Uc-q8a"/>
-                            <constraint firstItem="Vsg-kH-FdR" firstAttribute="leading" secondItem="ieV-Tc-v8g" secondAttribute="leading" constant="69" id="c6v-ip-93b"/>
+                            <constraint firstItem="BfW-sn-d7r" firstAttribute="centerY" secondItem="Vsg-kH-FdR" secondAttribute="centerY" id="F5t-D4-ZTZ"/>
+                            <constraint firstItem="BfW-sn-d7r" firstAttribute="leading" secondItem="Vsg-kH-FdR" secondAttribute="trailing" constant="12" id="JQe-Uc-q8a"/>
+                            <constraint firstItem="Vsg-kH-FdR" firstAttribute="leading" secondItem="ieV-Tc-v8g" secondAttribute="leading" constant="59" id="c6v-ip-93b"/>
                             <constraint firstItem="ieV-Tc-v8g" firstAttribute="trailing" secondItem="Ki8-k3-cmp" secondAttribute="trailing" id="loO-yK-rXx"/>
-                            <constraint firstItem="Vsg-kH-FdR" firstAttribute="top" secondItem="ieV-Tc-v8g" secondAttribute="top" constant="19" id="ofI-Af-XXf"/>
-                            <constraint firstItem="BfW-sn-d7r" firstAttribute="top" secondItem="ieV-Tc-v8g" secondAttribute="top" constant="15" id="uPd-7K-Sy8"/>
-                            <constraint firstItem="ieV-Tc-v8g" firstAttribute="trailing" secondItem="BfW-sn-d7r" secondAttribute="trailing" constant="16" id="zkm-yM-yuA"/>
+                            <constraint firstItem="Vsg-kH-FdR" firstAttribute="top" secondItem="ieV-Tc-v8g" secondAttribute="top" constant="27" id="ofI-Af-XXf"/>
+                            <constraint firstItem="ieV-Tc-v8g" firstAttribute="trailing" secondItem="BfW-sn-d7r" secondAttribute="trailing" constant="14" id="zkm-yM-yuA"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="375" height="1000"/>
